p2/confs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-one-service
                port:
                  name: http

    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-two-service
                port:
                  name: http
    # Default route
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-three-service
                port:
                  name: http
